# SPDX-FileCopyrightText: 2022 Sebastian Wagner <sebastian.wagner@intevation.de>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[bdist_wheel]
universal = 1

[pep8]
ignore = E221, E722, W504, E501

[pycodestyle]
ignore = E221, E722, W504, E501

[flake8]
ignore = E221, E722, W504, E501

[codespell]
skip = *.csv,*.data,*.svg,./docs/_build,.eggs,.git,testfile.txt,dga.txt,*.txt,*.json,./cover,*.egg-info

[metadata]
name = intelmq-fody-backend
description =  A backend to serve intelmq-cb-mailgen data for the webapp fody. 
author = Intevation GmbH
maintainer = Intevation GmbH
maintainer_email = sebastian.wagner@intevation.de
url = https://github.com/Intevation/intelmq-fody-backend
license =  AGPL-3.0-or-later
license_file = agpl-3.0.txt
long_description = file: README.md
long_description_content_type = text/markdown
